--- a/A3/admin.html
+++ b/A3/admin.html
@@ -1,160 +1,138 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8"/>
-  <title>Adminstration area</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/css/bootstrap-datepicker.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  <link rel="stylesheet" href="./initial.css"/>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script defer src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script defer src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+
+  <title>Admin</title>
 </head>
 <body>
 
-  <nav class="navbar navbar-inverse navbar-fixed-top" >
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand active" href="#">Manage Events</a>
-      </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        <div class="col-sm-3 col-md-3">
-          <form class="navbar-form" role="search">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search" name="q">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-              </div>
-            </div>
-          </form>
+  <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+    <a class="navbar-brand" href="./index.html">Event Manager</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavbar">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Search">
+            <span class="input-group-append">
+              <button type="button" class="btn btn-outline-light"><i class="fas fa-search"></i></button>
+            </span>
+          </div>
         </div>
-        <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-user" ></span> Admin</a></li>
-          <li><a href="index.html"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <div class="container" style="margin-top:100px">
-
-    <ul class="nav nav-tabs">
-      <li class="active"><a data-toggle="tab" href="#events">Events</a></li>
-      <li><a data-toggle="tab" href="#users">Users</a></li>
+      </li>
     </ul>
 
-    <div class="tab-content">
-      <div id="events" class="tab-pane fade in active">
-        <h3>Events</h3>
-        <div class="col-md-4 col-md-offset-4">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Events" name="q">
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
-          </div>
-        </div>
-        <div class="container">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Owner</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>Queima</td>
-                <td>MariGui</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Makukula Birthday Party</td>
-                <td>Makukula1904</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>PLOG Grades</td>
-                <td>Camacho</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item">
+        <a class="nav-link" href=# data-toggle="modal" data-target="#add_event"><i class="fas fa-plus"></i> Add Event </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href=#><i class="fas fa-bell"></i> Notifications </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="./profile.html"><i class="fas fa-user"></i> Admin </a>
+      </li>
+      <li class="navbar-item">
+        <a class="nav-link" href="./index.html"><i class="fas fa-sign-out-alt"></i> Logout </a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div class="modal fade" id="add_event">
+  <div class="modal-dialog modal-sm">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">New Event</h4>
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
       </div>
-      <div id="users" class="tab-pane fade">
-        <h3>Users</h3>
-        <div class="col-md-4 col-md-offset-4">
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Users" name="q">
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
+
+      <div class="modal-body ">
+
+        <label for="name">Name</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="name"><i class="fas fa-pencil-alt fa-fw"></i></span>
           </div>
+          <input type="text" class="form-control" placeholder="Enter Name">
         </div>
-        <div class="container">
-          <table class="table table-hover">
-            <thead>
-              <tr>
-                <th>#</th>
-                <th>Username</th>
-                <th>Email</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <td>1</td>
-                <td>MariGui</td>
-                <td>marigui@gmail.com</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-              <tr>
-                <td>2</td>
-                <td>Makukula1904</td>
-                <td>benficacampeao@hotmail.com</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-              <tr>
-                <td>3</td>
-                <td>TiagoC</td>
-                <td>mr_base@gmail.com</td>
-                <td><button type="button" class="btn btn-danger fa fa-ban fa-lg"></button></td>
-              </tr>
-            </tbody>
-          </table>
+
+        <label for="date">Date</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="date"><i class="fas fa-calendar-alt fa-fw"></i></span>
+          </div>
+          <input type="datetime-local" class="form-control" placeholder="Enter Date">
         </div>
+
+        <label for="localization">Localization</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="localization"><i class="fas fa-map-marker-alt fa-fw"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Enter Localization">
+        </div>
+
+        <label for="description">Description</label>
+        <div class="input-group mb-2">
+          <div class="input-group-prepend">
+            <span class="input-group-text" id="description"><i class="fas fa-align-justify fa-fw"></i></span>
+          </div>
+          <input type="text" class="form-control" placeholder="Enter Description">
+        </div>
+
+        <label for="upload_image">Upload Image</label>
+        <div class="input-group mb-2">
+          <label class="btn btn-outline-dark">
+            Browse… <input type="file" hidden id="upload_image">
+          </label>
+        </div>
+
+        <button type="button" class="btn btn-block btn-outline-dark mb-2">Add Event</button>
+
       </div>
     </div>
   </div>
+</div>
 
-  <footer>
-    <div class="container-inner" style="margin-top:50px">
-      <div id="footer-bottom" class="row">
-        <div class="col-md-6 footer-bottom-left">
-          <p>Copyright © 2018 by Tiago&Companhia.</p>
-        </div>
-        <div class="col-md-6 footer-bottom-right">
-        </div>
-      </div>
+<div class="container" style="margin-top:100px">
+
+<h1 class="display-4">Adminstration Area</h1>
+<hr>
+
+  <ul class="nav nav-tabs" role="tablist">
+    <li class="nav-item">
+      <a class="nav-link active" data-toggle="tab" href="#events"><h4>Events</h4></a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" data-toggle="tab" href="#users"><h4>Users</h4></a>
+    </li>
+  </ul>
+
+  <div class="tab-content">
+    <div id="events" class="container tab-pane active"><br>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
-  </footer>
+    <div id="users" class="container tab-pane fade"><br>
+      <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
+  </div>
+</div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.5.0/js/bootstrap-datepicker.js"></script>
-  <script src="./script.js" type="text/javascript" charset="utf-8"></script>
 
 </body>
 </html>
